# violetminer

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
scripts/: prep-aarch64.sh  win-clang-install.bat  win-install.bat
src/: CMakeLists.txt
src/ArgonVariants/: Argon2Hash.cpp  Variants.h
src/Backend/CPU/: CMakeLists.txt  CPU.cpp  CPU.h
src/Backend/Nvidia/: CMakeLists.txt  Nvidia.cpp  Nvidia.h  NvidiaHash.cpp  NvidiaHash.h  NvidiaUtils.cu  NvidiaUtils.h
src/Config/: Config.h  Constants.h
src/Miner/: CMakeLists.txt  GetConfig.cpp  GetConfig.h  main.cpp
src/MinerManager/: CMakeLists.txt  HashManager.cpp  HashManager.h  MinerManager.cpp  MinerManager.h
src/MinerManager/Nvidia/: CMakeLists.txt  NvidiaManager.cu  NvidiaManager.h
src/PoolCommunication/: PoolCommunication.cpp  PoolCommunication.h
src/Types/: JobSubmit.h  Pool.h  PoolMessage.h
src/Utilities/: GetChar.cpp  String.cpp
